# APL

./: .gitignore  CMakeLists.txt  README.md  tagger.py  vcpkg.json
c#/Client/: App.xaml.cs  Client.csproj  Client.sln  MauiProgram.cs
c#/Client/Client/: App.xaml.cs  Client.csproj
c#/Client/Client/Models/: PhotoInfoModel.cs
c#/Client/Client/Services/: ImagenetService.cs  RestService.cs  UserService.cs
c#/Client/Client/Views/: PostsPage.xaml
c#/Client/Client/Views/ViewModels/: PostsViewModel.cs
c#/Client/Models/: ImageUploadModel.cs  UserModel.cs
c#/Client/Services/: RestService.cs  UserService.cs
c#/Client/Views/: LoginPage.xaml  LoginPage.xaml.cs  PostsPage.xaml  PostsPage.xaml.cs  ProfiloPage.xaml  ProfiloPage.xaml.cs  SignupPage.xaml.cs
c#/Client/Views/ViewModels/: LoginViewModel.cs  ProfiloViewModel.cs  SignupViewModel.cs
c++/: CMakeLists.txt  SocketTCP.cpp  SocketTCP.h  main.cpp  server.cpp  vcpkg.json
c++/config/: config.ini  config.json
c++/database/: MongoDB.cpp  MongoDB.h
c++/exceptions/: LoginException.h  MinioException.h  SignupException.h  SocketException.h  UploadException.h
c++/handler/: Handler.cpp  Handler.h
c++/minio-client/: MinIOUploader.cpp  MinIOUploader.h
c++/personal_exception/: SocketException.h
c++/server/: Server.cpp  Server.h
c++/socket/: SocketTCP.cpp  SocketTCP.h
c++/utility/: ConfigManager.cpp  ConfigManager.h
python/: analyzer.py  config_tagger.json  main.py  mongoDB.py  requirements.txt  tagger.py
python/config/: config.ini
python/connection/: connection.py
python/database/: mongoDB.py
python/tagger/: tagger.py
testServer/: CMakeLists.txt  main.cpp
test_tagger/: client.py  server.py
